<resources>
    <string name="app_name">RiceTreatment</string>
    <string name="login">Let\'s Login</string>
    <string name="register">Create an Account</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact">Contact</string>
    <string name="email_address">Email Address</string>

    <string name="scan">Scan or Upload</string>
    <string name="type_something_here">Planning to put a picture here </string>
    <string name="diseases_and_pests">Diseases and Pests</string>
    <string name="reports">Reports</string>
    <string name="scan_or_upload_a_file">Scan or upload a file.</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="pickImage">Pick Image</string>

    <string name="forgot_password">Forgot Password</string>

    <string name="title_activity_main_dashboard">MainDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="about_app">About App</string>

    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="user_email">User Email</string>
    <string name="account">Account</string>

    <string name="name_of_disease">Report Disease Name</string>
    <string name="description">Description</string>
    <string name="scanned_picture">Scanned Picture</string>
    <string name="diagnose">Diagnose</string>
    <string name="report">Report</string>
    <string name="diagnosis">Diagnosis:</string>
    <string name="field_type">Field Type:</string>
    <string name="location_of_the_problem">Location of the Problem:</string>
    <string name="submit">Submit</string>
    <string name="comments">Comments:</string>
    <string name="result">Result</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confidence">Confidence:</string>
    <string name="manual_input">Manual Input</string>
    <string name="welcome">Welcome!</string>

    <string name="about"> Rice Doctor is an interactive tool for farmers who want to learn and diagnose pests, diseases, and other problems that occur in rice; and how to manage them.
        This app was developed for our Thesis.
        This interactive tool allows users to diagnose or at least make a short list of possible problems occurring in a rice crop. The combination of text description and images helps users in the process of diagnosing their problems.
        Fact sheets on each possible disorder provide brief description of the signs and symptoms of specific problems, together with details of any available management options.</string>
    <string name="treatment_plan">Treatment Plan:</string>
    <string name="intro_message">Leafcross is ready for your service.</string>
    <string name="add_new_disease_or_pest">Add New Disease or Pest</string>
    <string name="view_list_of_diseases_or_pest">View List of diseases or pest</string>
    <string name="disease_name_or_pest_name">Disease Name or Pest Name:</string>
    <string name="why_and_where_it_occurs">Why and where it occurs:</string>
    <string name="how_to_identify">How to Identify:</string>
    <string-array name="disease_gallery">
        <item> Bacterial Blight </item>
        <item> Blast </item>
        <item> Brown Spot </item>
        <item> Nitrogen(N) </item>
        <item> Phosphorus(P) </item>
        <item> Potassium(K) </item>
        <item> Tungro </item>
    </string-array>

    <string-array name="disease_description">
        <item> Why and where it occurs: </item>
        <item> Why and where it occurs: </item>
        <item> Why and where it occurs: </item>
        <item> Why and where it occurs: </item>
        <item> Why and where it occurs: </item>
        <item> Why and where it occurs: </item>
        <item> Why and where it occurs: </item>
    </string-array>
</resources>