<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".Scan">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightish"
        app:titleTextColor="@color/white"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnScanUpload"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="65dp"
            android:layout_marginTop="84dp"
            android:background="@drawable/btn_lightish"
            android:elevation="10dp"
            android:fontFamily="@font/bariol_bold"
            android:padding="10dp"
            android:text="@string/take_a_picture"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnPickImage"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="226dp"
            android:layout_marginTop="84dp"
            android:background="@drawable/btn_lightish"
            android:elevation="10dp"
            android:fontFamily="@font/bariol_bold"
            android:padding="10dp"
            android:text="@string/pickImage"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@+id/btnScanUpload"
            android:layout_marginTop="20dp"
            android:background="@drawable/elevated_gray"
            android:elevation="10dp" />

        <ImageView
            android:id="@+id/imageHere"
            android:layout_width="294dp"
            android:layout_height="248dp"
            android:layout_below="@+id/btnScanUpload"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/scanned_picture"
            android:elevation="10dp"
            android:padding="10dp"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageHere"
            android:layout_marginTop="10sp"
            android:elevation="10dp"
            android:enabled="false"
            android:fontFamily="@font/bariol_bold"
            android:text="@string/result"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imageRecycler"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@+id/result"
            android:elevation="10dp"
            android:nestedScrollingEnabled="false"
            android:padding="10dp"
            android:visibility="invisible" />
    </RelativeLayout>
</RelativeLayout>