<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_add"
        android:orientation="vertical"
        tools:context=".AddForm">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/opensans"
            android:text="@string/add_new_disease_or_pest"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/opensans"
            android:text="Select Picture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/opensans"
            android:text="@string/disease_name_or_pest_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtdiseaseName"
            android:fontFamily="@font/opensans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="Name of Disease/Pest" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/opensans"
            android:text="@string/why_and_where_it_occurs"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtfieldType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="Where it occurs" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/opensans"
            android:text="@string/how_to_identify"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtlocationArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="How to identify:" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/opensans"
            android:text="Treatment Plan"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txttreatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="How to manage and treat the disease or pest?" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/opensans"
            android:text="What it does:"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtcomments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="What does it do?" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="26dp"
            android:fontFamily="@font/opensans"
            android:text="Add Disease/Pest" />

    </LinearLayout>
</ScrollView>