<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/reports_bg"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/bariol_bold"
                    android:text="Here’s\nyour first\nstep with \nus! "
                    android:textColor="@color/black"
                    android:textSize="35dp" />

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/leafcross_icon" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtName"
                        style="@style/modifiedEditText"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:autofillHints="40"
                        android:background="@color/black"
                        android:ems="10"
                        android:fontFamily="@font/bariol_regular"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:paddingStart="12sp"
                        android:paddingEnd="12sp"
                        android:textColorHint="#757575" />

                    <EditText
                        android:id="@+id/txtUserName"
                        style="@style/modifiedEditText"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:autofillHints="40"
                        android:background="@color/black"
                        android:ems="10"
                        android:fontFamily="@font/bariol_regular"
                        android:hint="Username"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:paddingStart="12sp"
                        android:paddingEnd="12sp"
                        android:textColorHint="#757575" />

                    <EditText
                        android:id="@+id/txtContact"
                        style="@style/modifiedEditText"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:autofillHints="40"
                        android:background="@color/white"
                        android:ems="10"
                        android:fontFamily="@font/bariol_regular"
                        android:hint="@string/contact_number"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:paddingStart="12sp"
                        android:paddingEnd="12sp"
                        android:textColorHint="#757575" />

                    <EditText
                        android:id="@+id/txtAddress"
                        style="@style/modifiedEditText"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:autofillHints="40"
                        android:background="@color/white"
                        android:ems="10"
                        android:fontFamily="@font/bariol_regular"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:paddingStart="12sp"
                        android:paddingEnd="12sp"
                        android:textColorHint="#757575" />

                    <EditText
                        android:id="@+id/txtEmail"
                        style="@style/modifiedEditText"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:autofillHints="40"
                        android:background="@color/white"
                        android:ems="10"
                        android:fontFamily="@font/bariol_regular"
                        android:hint="@string/email_address"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:paddingStart="12sp"
                        android:paddingEnd="12sp"
                        android:textColorHint="#757575" />

                    <EditText
                        android:id="@+id/txtPassword"
                        style="@style/modifiedEditText"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:autofillHints="40"
                        android:background="@color/white"
                        android:ems="10"
                        android:fontFamily="@font/bariol_regular"
                        android:hint="@string/password"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:paddingStart="12sp"
                        android:paddingEnd="12sp"
                        android:textColorHint="#757575" />

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/btn_curvish"
                        android:fontFamily="@font/bariol_bold"
                        android:text="Register"
                        android:textColor="@color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imgBackLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="11dp"
        android:adjustViewBounds="false"
        android:src="@drawable/ic_back_img" />
</RelativeLayout>