<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".WriteReport">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:titleTextColor="@color/white"
            android:background="@color/lightish" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/bariol_bold"
            android:textColor="@color/black"
            android:text="Report Details"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/bariol_bold"
            android:text="Email:"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bariol_bold"
            android:text="@string/diagnosis"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtdiseaseName"
            android:fontFamily="@font/bariol_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:background="@drawable/custom_input"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="Name of Disease/Pest" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bariol_bold"
            android:text="@string/field_type"
            android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                android:ems="10"
                android:padding="10dp"
                android:background="@drawable/custom_input"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:strokeColor="@android:color/darker_gray"
                app:cardCornerRadius="4dp">

                <Spinner
                    android:id="@+id/txtfieldType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/bariol_regular"
                    android:padding="10dp" />
            </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bariol_bold"
            android:text="@string/location_of_the_problem"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtlocationArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:background="@drawable/custom_input"
            android:fontFamily="@font/bariol_regular"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="Where was the problem observed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bariol_bold"
            android:text="Treatment Plan"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txttreatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:background="@drawable/custom_input"
            android:fontFamily="@font/bariol_regular"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="How do you plan to treat the problem?" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bariol_bold"
            android:text="@string/comments"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtcomments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:background="@drawable/custom_input"
            android:fontFamily="@font/bariol_regular"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="Comments regarding the problem" />
            <Button
                android:id="@+id/btnSend"
                android:layout_width="150dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_curvish"
                android:layout_margin="26dp"
                android:fontFamily="@font/bariol_bold"
                android:text="Send Report" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>