<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".Login"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/viewParent.headerText.NoMode"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:text="Already \nhave an \nAccount?"
                android:textSize="30dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_login_hero" />
        </RelativeLayout>

        <EditText
            android:id="@+id/txtEmail"
            style="@style/modifiedEditText"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autofillHints="40"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/opensans"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/txtPassword"
            style="@style/modifiedEditText"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:autofillHints="40"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/opensans"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:textColorHint="#757575" />

        <TextView
            style="@style/viewParent"
            android:layout_marginTop="10dp"
            android:text="Forgot Password?"
            android:textColor="@color/black"
            android:textSize="@dimen/newsMoreTextSize" />x

        <Button
            android:id="@+id/btnLoginNow"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_curve"
            android:fontFamily="@font/opensans"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtRegister"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="New user? Register Now"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:weightSum="12">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@color/black" />

            <TextView
                style="@style/viewParent.headerText.NoMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="Don't want to register?"
                android:textAlignment="center"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"></LinearLayout>

        <Button
            android:id="@+id/btnNoAccount"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_curve"
            android:fontFamily="@font/opensans"
            android:text="Continue with No Account"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>